--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,28 @@
-# mariaDB
-spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
-spring.datasource.username=postgres
+# postgreDB
+spring.datasource.url=jdbc:postgresql://192.168.0.24:5432/postgres
+spring.datasource.username=ktpdf
 spring.datasource.password=1234
 
-spring.jpa.hibernate.ddl-auto=validate
+# Hibernate ddl auto (create, create-drop, update, validate, none): with "update" the database schema will be automatically updated accordingly to java entities found in the project
+#spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
 logging.level.org.hibernate.type.descriptor.sql=trace
+
+#logback configuration
+logging.level.org.springframework=info
+logging.level.kr.risingmobile.pdfgen=debug
+logging.file.max-size=1024MB
+logging.file.max-history=30
+
+logging.file=./log/pdfgen.log
+logging.path=log
+
+server.port=8888
+
+# win path
+pdfgen.doc.home=D:/ktpdf/pdfTemp/
