--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,11 @@
 # postgreDB
-spring.datasource.url=jdbc:postgresql://192.168.0.24:5432/postgres
-spring.datasource.username=ktpdf
+spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+spring.datasource.username=postgres
 spring.datasource.password=1234
 
 # Hibernate ddl auto (create, create-drop, update, validate, none): with "update" the database schema will be automatically updated accordingly to java entities found in the project
 #spring.jpa.hibernate.ddl-auto=validate
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 
 spring.jpa.show-sql=true
@@ -26,3 +26,8 @@ server.port=8888
 
 # win path
 pdfgen.doc.home=D:/ktpdf/pdfTemp/
+
+
+#server.contextPath = /temp/
+
+#static.resource.location=file:///D:/temp/
