--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@ spring.datasource.password=1234
 
 # Hibernate ddl auto (create, create-drop, update, validate, none): with "update" the database schema will be automatically updated accordingly to java entities found in the project
 #spring.jpa.hibernate.ddl-auto=validate
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 
 spring.jpa.show-sql=true
@@ -25,8 +25,10 @@ logging.path=log
 server.port=8888
 
 # win path
-pdfgen.doc.home=D:/ktpdf/pdfTemp/
-
+pdfgen.doc.home=D:/ktpdf/pdfgen/src/main/resources/
+pdfgen.doc.font1=C:/Windows/Fonts/malgun.ttf
+pdfgen.doc.font2=C:/Windows/Fonts/gulim.ttc
+pdfgen.imgPath=D:/ktpdf/pdfgen/src/main/resources/logo.png
 
 #server.contextPath = /temp/
 
