--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -23,6 +23,8 @@ logging.file=./log/pdfgen.log
 logging.path=log
 
 server.port=8888
+server.servlet-path=/*
+#server.context-path=/ktpdf
 
 # win path
 pdfgen.doc.home=D:/ktpdf/pdfgen/src/main/resources/
