--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -27,10 +27,11 @@ server.servlet-path=/*
 #server.context-path=/ktpdf
 
 # win path
-pdfgen.doc.home=D:/ktpdf/pdfgen/src/main/resources/
+pdfgen.doc.home=D:/ktpdf/pdfgen/src/main/resources/storage
 pdfgen.doc.font1=C:/Windows/Fonts/malgun.ttf
 pdfgen.doc.font2=C:/Windows/Fonts/gulim.ttc
 pdfgen.imgPath=D:/ktpdf/pdfgen/src/main/resources/logo.png
+pdfgen.context.path=/docPdf
 
 #server.contextPath = /temp/
 
