--- a/.gitignore
+++ b/.gitignore
@@ -27,3 +27,9 @@
 
 /log/
 /src/main/resources/application.properties
+src/main/resources/static/10mb.pdf
+log/pdfgen.log
+src/main/resources/static/compressed.tracemonkey-pldi-09.pdf
+src/main/resources/static/testsample.pdf
+src/main/webapp/WEB-INF/ajax_test.html
+log/pdfgen.log
