--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -31,7 +31,7 @@ pdfgen.doc.home=C:/Users/XPS 15 9550/workspace/pdfgen/src/main/resources/storage
 pdfgen.doc.font1=C:/Windows/Fonts/malgun.ttf
 pdfgen.doc.font2=C:/Windows/Fonts/gulim.ttc
 pdfgen.imgPath=C:/ktpdf/pdfgen/src/main/resources/logo.png
-pdfgen.context.path=/docPdf
+pdfgen.context.path=/escDoc/pdf
 
 #server.contextPath = /temp/
 
