--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,11 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
 spring.datasource.username=postgres
 spring.datasource.password=1234
 
+# kt-test server
+#spring.datasource.url=jdbc:postgresql://192.168.1.185:5432/paperlessdb
+#spring.datasource.username=paperless
+#spring.datasource.password=apw-1234
+
 # Hibernate ddl auto (create, create-drop, update, validate, none): with "update" the database schema will be automatically updated accordingly to java entities found in the project
 #spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.hibernate.ddl-auto=update
@@ -22,9 +27,13 @@ logging.file.max-history=30
 logging.file=./log/pdfgen.log
 logging.path=log
 
+server.host=http://localhost
 server.port=8888
 server.servlet-path=/*
 #server.context-path=/ktpdf
+
+#server.host=http://paperless.kt.com
+#server.port=8080
 
 # win path
 pdfgen.doc.home=D:/storage
@@ -33,6 +42,15 @@ pdfgen.doc.font2=C:/Windows/Fonts/gulim.ttc
 pdfgen.imgPath=D:/storage/logo.png
 pdfgen.context.path=/escDoc/pdf
 
+# apw server
+#pdfgen.doc.home=/approot/webapps/paperless.kt.com/storage
+#pdfgen.doc.font1=/usr/share/fonts/nhn-nanum/NanumGothic.ttf
+#pdfgen.doc.font2=/usr/share/fonts/nhn-nanum/NanumGothic.ttf
+#pdfgen.imgPath=/approot/webapps/paperless.kt.com/storage/logo.png
+#pdfgen.context.path=/escDoc/pdf
+
+# apw server error발생되어 추가
+spring.jmx.enabled=false
 #server.contextPath = /temp/
 
 #static.resource.location=file:///D:/temp/
