--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,47 @@
 /nbdist/
 /.nb-gradle/
 /build/
+log/pdfgen.log.2019-02-28.0.gz
+log/pdfgen.log.2019-03-04.0.gz
+log/pdfgen.log.2019-03-06.0.gz
+log/pdfgen.log
+log/pdfgen.log.2019-03-08.0.gz
+log/pdfgen.log.2019-03-12.0.gz
+src/main/resources/test.pdf
+src/main/resources/test_file_name.pdf
+src/main/resources/static/sample_1.pdf
+src/main/resources/static/sample_old.pdf
+src/main/resources/storage/1.pdf
+src/main/resources/storage/190001_final.pdf
+src/main/resources/storage/190001_signer1.pdf
+src/main/resources/storage/190001_signer2.pdf
+src/main/resources/storage/190001_undefined.pdf
+src/main/resources/storage/190005_signer1.pdf
+src/main/resources/storage/190005_signer1_1.pdf
+src/main/resources/storage/190005_signer1_2.pdf
+src/main/resources/storage/190005_signer2.pdf
+src/main/resources/storage/1_signer1.pdf
+src/main/resources/storage/1_signer2.pdf
+log/pdfgen.log
+log/pdfgen.log.2019-03-15.0.gz
+log/pdfgen.log.2019-03-18.0.gz
+log/pdfgen.log.2019-03-21.0.gz
+log/pdfgen.log
+log/pdfgen.log.2019-03-19.0.gz
+log/pdfgen.log.2019-03-20.0.gz
+src/main/webapp/WEB-INF/web.xml
+pom.xml
+.vscode/settings.json
+log/pdfgen.log
+log/pdfgen.log
+src/main/webapp/WEB-INF/web.xml
+src/main/resources/storage/sample.pdf
+pom.xml
+.vscode/settings.json
+log/pdfgen.log
+src/main/webapp/WEB-INF/jsp/test.jsp
+src/main/resources/storage/sample.pdf
+.vscode/settings.json
+pom.xml
+.gitignore
+.vscode/settings.json
