--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -39,8 +39,11 @@ server.servlet-path=/*
 pdfgen.doc.home=C:/Users/XPS 15 9550/workspace/pdfgen/src/main/resources/storage
 pdfgen.doc.font1=C:/Windows/Fonts/malgun.ttf
 pdfgen.doc.font2=C:/Windows/Fonts/gulim.ttc
-pdfgen.imgPath=C:/ktpdf/pdfgen/src/main/resources/logo.png
+pdfgen.imgPath=C:/storage/stamp.png
 pdfgen.context.path=/escDoc/pdf
+
+# img | sign
+pdfgen.stampType=img
 
 # apw server
 #pdfgen.doc.home=/approot/webapps/paperless.kt.com/storage
@@ -54,3 +57,6 @@ spring.jmx.enabled=false
 #server.contextPath = /temp/
 
 #static.resource.location=file:///D:/temp/
+
+spring.mvc.view.prefix: /WEB-INF/jsp/
+spring.mvc.view.suffix: .jsp
