--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,7 +10,7 @@ spring.datasource.password=1234
 
 # Hibernate ddl auto (create, create-drop, update, validate, none): with "update" the database schema will be automatically updated accordingly to java entities found in the project
 #spring.jpa.hibernate.ddl-auto=validate
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 
 spring.jpa.show-sql=true
@@ -36,11 +36,22 @@ server.servlet-path=/*
 #server.port=8080
 
 # win path
-pdfgen.doc.home=C:/Users/XPS 15 9550/workspace/pdfgen/src/main/resources/storage
-pdfgen.doc.font1=C:/Windows/Fonts/malgun.ttf
-pdfgen.doc.font2=C:/Windows/Fonts/gulim.ttc
-pdfgen.imgPath=C:/ktpdf/pdfgen/src/main/resources/logo.png
+pdfgen.doc.home=D:/storage
+
+pdfgen.doc.font1Nm=
+pdfgen.doc.font1=/font/NanumGothic.ttf
+pdfgen.doc.font2Nm=
+pdfgen.doc.font2=/font/NanumMyeongjo.ttf
+pdfgen.doc.font3Nm=
+pdfgen.doc.font3=/font/KTfontMedium.ttf
+#pdfgen.doc.font1=C:/Windows/Fonts/NotoSansCJKkr-Regular.ttf
+#pdfgen.doc.font2=C:/Windows/Fonts/NotoSansCJKkr-Regular.otf
 pdfgen.context.path=/escDoc/pdf
+
+# img | sign
+pdfgen.stampType=img
+#pdfgen.imgPath=D:/ktpdf/pdfgen/src/main/resources/storage/stamp.png
+pdfgen.imgPath=/storage/stamp.png
 
 # apw server
 #pdfgen.doc.home=/approot/webapps/paperless.kt.com/storage
@@ -54,3 +65,6 @@ spring.jmx.enabled=false
 #server.contextPath = /temp/
 
 #static.resource.location=file:///D:/temp/
+
+#spring.mvc.view.prefix=/WEB-INF/jsp/
+#spring.mvc.view.suffix=.jsp
