jpa -> mybatis 로 대체

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -36,7 +36,7 @@ server.servlet-path=/*
 #server.port=8080
 
 # win path
-pdfgen.doc.home=D:/storage
+pdfgen.doc.home=C:/storage
 
 pdfgen.doc.font1Nm=
 pdfgen.doc.font1=/font/NanumGothic.ttf
@@ -46,6 +46,7 @@ pdfgen.doc.font3Nm=
 pdfgen.doc.font3=/font/KTfontMedium.ttf
 #pdfgen.doc.font1=C:/Windows/Fonts/NotoSansCJKkr-Regular.ttf
 #pdfgen.doc.font2=C:/Windows/Fonts/NotoSansCJKkr-Regular.otf
+# pdfgen.context.path=/canvas/escDoc/pdf
 pdfgen.context.path=/escDoc/pdf
 
 # img | sign
@@ -68,3 +69,6 @@ spring.jmx.enabled=false
 
 #spring.mvc.view.prefix=/WEB-INF/jsp/
 #spring.mvc.view.suffix=.jsp
+
+# mapper 이하를 로깅 위치로 설정.
+logging.level.com.bestiansoft.pdfgen.mapper=DEBUG
